Added Entity Framework Core and database

--- a/Diary/appsettings.json
+++ b/Diary/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DiaryEntriesDatabase": "Server=(localdb)\\mssqllocaldb;Database=Diary_DB;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
