Created database-based logic and added validation

--- a/Diary/appsettings.json
+++ b/Diary/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DiaryEntriesDatabase": "Server=(localdb)\\mssqllocaldb;Database=Diary_DB;Trusted_Connection=True;"
+    "DiaryEntriesDatabase": "Server=(localdb)\\mssqllocaldb;Database=D:\\Programowanie\\Diary\\Diary_DB.mdf;Trusted_Connection=true;"
   },
   "Logging": {
     "LogLevel": {
